Sección 2: Introducción a Astro: Navegación entre páginas

--- a/01-foundation/src/pages/index.astro
+++ b/01-foundation/src/pages/index.astro
@@ -12,7 +12,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Index</h1>
+
+    <nav>
+      <a href="/">Home</a>
+      <a href="/about">About</a>
+      <a href="/contact">Contact</a>
+    </nav>
 
     <p>Current moment (static): {new Date().toLocaleTimeString()}</p>
     <p >Current moment (dynamic): <span class="current-moment"></span></p>
