--- a/01-foundation/src/pages/index.astro
+++ b/01-foundation/src/pages/index.astro
@@ -1,41 +1,7 @@
 ---
-
+import AppLayout from '../layout/AppLayout.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Index</h1>
-
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/contact">Contact</a>
-    </nav>
-
-    <p>Current moment (static): {new Date().toLocaleTimeString()}</p>
-    <p >Current moment (dynamic): <span class="current-moment"></span></p>
-
-    <footer>
-      Año: 2024
-    </footer>
-
-    <script>
-      const currentYear = new Date().getFullYear();
-      const currentTime = new Date().toLocaleTimeString();
-
-      const footerElement = document.querySelector("footer") as HTMLElement;
-      const currentTimeElement = document.querySelector("span.current-moment") as HTMLElement;
-
-      footerElement.innerHTML = `Año: ${currentYear}`; 
-      currentTimeElement.innerHTML = currentTime;
-    </script>
-	</body>
-</html>
+<AppLayout title="Home">
+  <p>Content home</p>
+</AppLayout>
