--- a/01-foundation/src/pages/about.astro
+++ b/01-foundation/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import AppLayout from '../layout/AppLayout.astro';
+import AppLayout from '../layouts/AppLayout.astro';
 ---
 
 <AppLayout title="About">
