Sección 2: Introducción a Astro: Estilos por componente y globales

--- a/01-foundation/src/pages/about.astro
+++ b/01-foundation/src/pages/about.astro
@@ -3,5 +3,12 @@ import AppLayout from '../layouts/AppLayout.astro';
 ---
 
 <AppLayout title="About">
+  <h1>Title page</h1>
   <p>Content about</p>
 </AppLayout>
+
+<style>
+  h1 {
+    color: red;
+  }
+</style>
