--- a/01-foundation/src/layouts/AppLayout.astro
+++ b/01-foundation/src/layouts/AppLayout.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 
 import Navbar from '../components/Navbar.astro';
+import '../styles/global.css';
 
 const { title } = Astro.props;
 ---
@@ -18,8 +19,6 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <h1>{title}</h1>
-
     <Navbar />
 
     <slot />
