--- a/01-foundation/src/layouts/AppLayout.astro
+++ b/01-foundation/src/layouts/AppLayout.astro
@@ -5,6 +5,7 @@ interface Props {
 
 import Navbar from '../components/Navbar.astro';
 import '../styles/global.css';
+import ClientRouter from 'astro/components/ClientRouter.astro';
 
 const { title } = Astro.props;
 ---
@@ -17,6 +18,8 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    <ClientRouter />
   </head>
   <body>
     <Navbar />
