--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -1,9 +1,18 @@
 ---
+import type { IPokemonListResponse } from '../interfaces/pokemon-list.response';
 import MainLayout from '../layouts/MainLayout.astro';
 
 import '../styles/app.css';
+
+const resp = await fetch('https://pokeapi.co/api/v2/pokemon');
+const data = (await resp.json()) as IPokemonListResponse;
+
+console.log('🚀 ~ resp:', resp);
 ---
 
 <MainLayout title="Home">
-  <h1>Home :D</h1>
+  <h1>List of Pokemons</h1>
+  <ul class="list-disc">
+    {data.results.map((pokemon) => <li>{pokemon.name}</li>)}
+  </ul>
 </MainLayout>
