--- a/02-pokemon-static/src/styles/app.css
+++ b/02-pokemon-static/src/styles/app.css
@@ -1,5 +1,7 @@
-/* Tailwind core */
-@import 'tailwindcss';
+/* Tailwind core  */
+@import 'tailwindcss/theme' layer(theme);
+@import 'tailwindcss/preflight' layer(base);
+@import 'tailwindcss/utilities' layer(utilities);
 
 /* Tokens */
 @import './theme/tokens.css';
@@ -8,7 +10,7 @@
 @import './base/base.css';
 @import './base/typography.css';
 
-/*  Components */
+/* Components */
 @import './components/buttons.css';
 
 /* Utilities */
