--- a/02-pokemon-static/src/layouts/MainLayout.astro
+++ b/02-pokemon-static/src/layouts/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/app.css';
 interface Props {
   title: string;
 }
@@ -16,7 +17,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <main class="page">
+      <slot />
+    </main>
 
     <script>
       const userPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
