--- a/02-pokemon-static/src/styles/utilities/layout.css
+++ b/02-pokemon-static/src/styles/utilities/layout.css
@@ -3,8 +3,8 @@
     @apply mx-auto w-full max-w-6xl px-4 md:px-6;
   }
 
-  .section-page {
-    @apply py-8 md:py-12;
+  .page {
+    @apply flex flex-col min-h-screen mx-auto w-full max-w-6xl px-4 md:px-6 gap-4;
   }
 
   .text-balance {
