--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -3,14 +3,15 @@ import PokemonCard from '../components/pokemons/PokemonCard.astro';
 import { queryClient } from '../lib/queryClient';
 import MainLayout from '../layouts/MainLayout.astro';
 import { getPokemonList } from '../lib/services/pokemon.service';
+import { queryKeys } from '../lib/queryKeys';
 
 const data = await queryClient.fetchQuery({
-  queryKey: ['pokemon-list'],
+  queryKey: queryKeys.pokemonList(),
   queryFn: () => getPokemonList(),
 });
 ---
 
-<MainLayout title="Home" >
+<MainLayout title="Home">
   <h1>List of Pokemons</h1>
 
   <section
