--- a/02-pokemon-static/src/pages/pokemons/[name].astro
+++ b/02-pokemon-static/src/pages/pokemons/[name].astro
@@ -1,19 +1,19 @@
 ---
 import type { GetStaticPaths } from 'astro';
-import MainLayout from '../../layouts/MainLayout.astro';
-import PokemonCard from '../../components/pokemons/PokemonCard.astro';
-import type { IPokemonResponse } from '../../interfaces/pokemon.response';
+
+import { getPokemonList } from '../../lib/services/pokemon.service';
 import { queryClient } from '../../lib/queryClient';
 import { queryKeys } from '../../lib/queryKeys';
-import { getPokemonByUrl, getPokemonList } from '../../lib/services/pokemon.service';
+import MainLayout from '../../layouts/MainLayout.astro';
+import PokemonCardPreview from '../../components/pokemons/PokemonCardPreview.astro';
 
 export const getStaticPaths = (async () => {
-  const dataPokemons = await queryClient.fetchQuery({
+  const { results: pokemons } = await queryClient.fetchQuery({
     queryKey: queryKeys.pokemonList(),
     queryFn: () => getPokemonList(),
   });
 
-  const initialPokemons = dataPokemons.results.map((pokemon) => ({
+  const initialPokemons = pokemons.map((pokemon) => ({
     params: {
       name: pokemon.name,
     },
@@ -29,20 +29,18 @@ export const getStaticPaths = (async () => {
 const { name } = Astro.params;
 const { url } = Astro.props;
 
-const pokemon = await queryClient.fetchQuery<IPokemonResponse>({
-  queryKey: queryKeys.pokemonDetail(name),
-  queryFn: () => getPokemonByUrl(url),
-});
+const id = url.split('/').at(-2);
+const audioSrc = `https://raw.githubusercontent.com/PokeAPI/cries/main/cries/pokemon/latest/${id}.ogg`;
 ---
 
-<MainLayout title="Some pokemon">
+<MainLayout title={`Detail | ${name}`}>
   <a href="/">Return</a>
 
   <h1>{name}</h1>
 
-  <PokemonCard name={name} url={url} />
+  <PokemonCardPreview name={name} url={url} />
 
   <audio controls>
-    <source src={pokemon.cries.latest} type="audio/ogg" />
+    <source src={audioSrc} type="audio/ogg" />
   </audio>
 </MainLayout>
