--- a/02-pokemon-static/src/pages/pokemons/[page].astro
+++ b/02-pokemon-static/src/pages/pokemons/[page].astro
@@ -1,10 +1,11 @@
 ---
 import type { GetStaticPaths } from 'astro';
-import PokemonCard from '../../components/pokemons/PokemonCard.astro';
-import { queryClient } from '../../lib/queryClient';
-import MainLayout from '../../layouts/MainLayout.astro';
+
 import { getPokemonList } from '../../lib/services/pokemon.service';
+import { queryClient } from '../../lib/queryClient';
 import { queryKeys } from '../../lib/queryKeys';
+import MainLayout from '../../layouts/MainLayout.astro';
+import PokemonCardPreview from '../../components/pokemons/PokemonCardPreview.astro';
 
 export const getStaticPaths = (async ({ paginate }) => {
   const limit = 20;
@@ -21,13 +22,13 @@ const { page } = Astro.props;
 ---
 
 <MainLayout title="Home">
-  <h1>List of Pokemons</h1>
+  <h1>Pokemons details</h1>
 
   <section
     aria-label="list of pokemons"
     class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-5 gap-4"
   >
-    {page.data.map((pokemon) => <PokemonCard {...pokemon} />)}
+    {page.data.map((pokemon) => <PokemonCardPreview {...pokemon} />)}
   </section>
 
   <section>
