--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -18,6 +18,6 @@ const { results: pokemons } = await queryClient.fetchQuery({
     aria-label="list of pokemons"
     class="grid grid-cols-2 sm:grid-cols-4 md:grid-cols-5 gap-4"
   >
-    {pokemons.map((pokemon) => <PokemonCardPreview {...pokemon} hrefMode='name' />)}
+    {pokemons.map((pokemon) => <PokemonCardPreview {...pokemon} />)}
   </section>
 </MainLayout>
