Sección 3: Rutas dinámicas y paginación estática: Typescript - path alias

--- a/02-pokemon-static/src/layouts/MainLayout.astro
+++ b/02-pokemon-static/src/layouts/MainLayout.astro
@@ -1,7 +1,7 @@
 ---
 import { ClientRouter } from 'astro:transitions';
 
-import '../styles/app.css';
+import '@styles/app.css';
 
 interface Props {
   title: string;
