--- a/02-pokemon-static/src/pages/index.astro
+++ b/02-pokemon-static/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
-import { getPokemonList } from '../lib/services/pokemon.service';
-import { queryClient } from '../lib/queryClient';
-import { queryKeys } from '../lib/queryKeys';
-import MainLayout from '../layouts/MainLayout.astro';
-import PokemonCardPreview from '../components/pokemons/PokemonCardPreview.astro';
+import { getPokemonList } from "@lib/services/pokemon.service";
+import { queryClient } from "@lib/queryClient";
+import { queryKeys } from "@lib/queryKeys";
+import MainLayout from "@layouts/MainLayout.astro";
+import PokemonCardPreview from "@components/pokemons/PokemonCardPreview.astro";
+
+
 
 const { results: pokemons } = await queryClient.fetchQuery({
   queryKey: queryKeys.pokemonList(),
