--- a/02-pokemon-static/src/pages/pokemons/[name].astro
+++ b/02-pokemon-static/src/pages/pokemons/[name].astro
@@ -1,11 +1,11 @@
 ---
 import type { GetStaticPaths } from 'astro';
 
-import { getPokemonList } from '../../lib/services/pokemon.service';
-import { queryClient } from '../../lib/queryClient';
-import { queryKeys } from '../../lib/queryKeys';
-import MainLayout from '../../layouts/MainLayout.astro';
-import PokemonCardPreview from '../../components/pokemons/PokemonCardPreview.astro';
+import { getPokemonList } from '@lib/services/pokemon.service';
+import { queryClient } from '@lib/queryClient';
+import { queryKeys } from '@lib/queryKeys';
+import MainLayout from '@layouts/MainLayout.astro';
+import PokemonCardPreview from '@components/pokemons/PokemonCardPreview.astro';
 
 export const getStaticPaths = (async () => {
   const { results: pokemons } = await queryClient.fetchQuery({
