fix: styles with @utility

--- a/02-pokemon-static/src/pages/pokemon/[id].astro
+++ b/02-pokemon-static/src/pages/pokemon/[id].astro
@@ -30,7 +30,7 @@ const { name, url } = Astro.props;
 ---
 
 <MainLayout title={name}>
-  <a href="/pokemons/1">Return</a>
+  <a href="/pokemons/1" class="unused-style">Return</a>
 
   <h1>{name}</h1>
 
