--- a/02-pokemon-static/src/styles/utilities/layout.css
+++ b/02-pokemon-static/src/styles/utilities/layout.css
@@ -1,5 +1,3 @@
-@layer utilities {
-  .page {
-    @apply flex flex-col min-h-screen mx-auto w-full max-w-6xl px-4 md:px-6 gap-4;
-  }
+@utility page {
+  @apply flex flex-col min-h-screen mx-auto w-full max-w-6xl px-4 md:px-6 gap-4;
 }
