Sección 4: Añadir dinamismo a nuestro sitio estático : Indicador de ruta activa

--- a/02-pokemon-static/src/components/shared/Navbar.astro
+++ b/02-pokemon-static/src/components/shared/Navbar.astro
@@ -4,20 +4,46 @@ const links = [
   { href: '/pokemons/1', text: 'Paginated' },
   { href: '/favorites', text: 'Favorites' },
 ];
+
+const { pathname } = Astro.url;
 ---
 
 <nav class="bg-white shadow dark:bg-gray-800">
   <div
     class="container flex items-center justify-center p-6 mx-auto text-gray-600 capitalize dark:text-gray-300"
   >
-    {
-      links.map((link) => (
+    <!-- {
+      links.map(({ href, text }) => (
         <a
-          href={link.href}
-          class="text-gray-800 dark:text-gray-200 border-b-2 border-blue-500 mx-1.5 sm:mx-6"
+          href={href}
+          class:list={[
+            'hover:no-underline text-gray-800 dark:text-gray-200  mx-1.5 sm:mx-6',
+            {
+              'border-b-2 border-blue-500': pathname === href,
+            },
+          ]}
         >
-          {link.text}
+          {text}
         </a>
+      ))
+    } -->
+    {
+      links.map(({ href, text }) => (
+        <div>
+          <a
+            href={href}
+            class="hover:no-underline text-gray-800 dark:text-gray-200  mx-1.5 sm:mx-6"
+          >
+            {text}
+          </a>
+
+          {pathname === href && (
+            <div
+              class="border-b-2 border-primary mx-4 shadow shadow-primary/20"
+              transition:name="indicator"
+            />
+          )}
+        </div>
       ))
     }
   </div>
