--- a/02-pokemon-static/src/pages/favorites/index.astro
+++ b/02-pokemon-static/src/pages/favorites/index.astro
@@ -1,9 +1,8 @@
 ---
-import MainLayout from "@layouts/MainLayout.astro";
-
-
+import Title from '@components/shared/Title.astro';
+import MainLayout from '@layouts/MainLayout.astro';
 ---
 
 <MainLayout title="Favorite">
-
+  <Title>Favorite</Title>
 </MainLayout>
