--- a/02-pokemon-static/src/pages/pokemon/[id].astro
+++ b/02-pokemon-static/src/pages/pokemon/[id].astro
@@ -6,6 +6,7 @@ import { queryClient } from '@lib/queryClient';
 import { queryKeys } from '@lib/queryKeys';
 import MainLayout from '@layouts/MainLayout.astro';
 import PokemonCardPreview from '@components/pokemons/PokemonCardPreview.astro';
+import Title from '@components/shared/Title.astro';
 
 export const getStaticPaths = (async () => {
   const { results: pokemons } = await queryClient.fetchQuery({
@@ -32,7 +33,7 @@ const { name, url } = Astro.props;
 <MainLayout title={name}>
   <a href="/pokemons/1" class="unused-style">Return</a>
 
-  <h1>{name}</h1>
+  <Title>{name}</Title>
 
   <PokemonCardPreview name={name} url={url} />
 </MainLayout>
