Sección 4: Añadir dinamismo a nuestro sitio estático : Ciclo de vida del View Transition

--- a/02-pokemon-static/src/pages/pokemons/[name].astro
+++ b/02-pokemon-static/src/pages/pokemons/[name].astro
@@ -67,11 +67,11 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
 </MainLayout>
 
 <script>
-  const App = () => {
+  const handlePageLoaded = () => {
     const $btnFavorite = document.querySelector('#btn-favorite') as HTMLButtonElement;
 
     if (!$btnFavorite) return;
-    
+
     const name = $btnFavorite.dataset.name;
     const id = $btnFavorite.dataset.id;
 
@@ -80,5 +80,11 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
     });
   };
 
-  document.addEventListener('astro:page-load', () => App());
+  document.addEventListener('astro:page-load', handlePageLoaded);
+
+  // document.addEventListener("astro:before-preparation", () => console.log("astro:before-preparation"))
+  // document.addEventListener("astro:after-preparation", () => console.log("astro:after-preparation"))
+  // document.addEventListener("astro:before-swap", () => console.log("astro:before-swap"))
+  // document.addEventListener("astro:after-swap", () => console.log("astro:after-swap"))
+  // document.addEventListener("astro:page-load", () => console.log("astro:page-load"))
 </script>
